plugins {
	id 'java-library'
	id 'com.github.johnrengelman.shadow' version '7.1.1'
}

apply plugin: 'java'

java.toolchain.languageVersion = JavaLanguageVersion.of(16)

configurations {
	shade
	implementation.extendsFrom(shade)
}

sourceSets {
	api {
		java {
			srcDir "$rootDir/src/api/java"
		}
		//The API has no resources
		resources.srcDirs = []
		compileClasspath += configurations.getByName("shade")
	}

	main {
		java {
			srcDirs = [
				"$rootDir/src/main/java"
			]
		}
		resources {
			srcDirs = [
				"$rootDir/src/main/resources"
			]
		}
		compileClasspath += sourceSets.api.output
		runtimeClasspath += sourceSets.api.output
	}
}

repositories {
	jcenter()
	mavenCentral()

	maven {
		name 'm2-dv8tion'
		url 'https://m2.dv8tion.net/releases'
	}
	maven {
		name 'jda-chewtils'
		url 'https://m2.chew.pro/releases'
	}
	maven {
		name 'jda-chewtils-shapshots'
		url 'https://m2.chew.pro/snapshots/'
	}
	flatDir {
		dirs 'libs'
	}
	maven {
		url "https://dl.cloudsmith.io/public/matyrobbrt/javanbt/maven/"
	}
}

dependencies {
	// shade fileTree(include: ['*.jar'], dir: 'libs')
	
	testImplementation 'junit:junit:latest.release'

	shade group: 'pw.chew', name: 'jda-chewtils', version: '2.0-interactions-SNAPSHOT'
	// chewtils for JDA 5.0 is not published on the maven
	// shade ":jda-chewtils-2.0-SNAPSHOT"
	// JDA is not published anywhere, as it is a dev branch
	// shade group: 'net.dv8tion', name: 'JDA', version: 'latest.release'
	shade ":JDA-5.0.0-alpha.4_DEV"
	
	shade group: 'io.vavr', name: 'vavr', version: 'latest.release'
	shade group: 'io.github.cdimascio', name:'dotenv-java', version: 'latest.release'
	shade group: 'com.vdurmont', name: 'emoji-java', version: 'latest.release'
	shade group: 'com.github.natanbc', name: 'lavadsp', version: 'latest.release'
	shade group: 'net.dean.jraw', name: 'JRAW', version: 'latest.release'
	shade group: 'com.graphql-java', name: 'graphql-java', version: 'latest.release'
	shade group: 'org.reflections', name: 'reflections', version: 'latest.release'
	shade group: 'com.jhlabs', name: 'filters', version: 'latest.release'
	shade group: 'com.object-refinery', name: 'orsoncharts', version: 'latest.release'
	shade group: 'org.jetbrains', name: 'annotations', version: 'latest.release'
	shade group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
	shade group: 'org.xerial', name: 'sqlite-jdbc', version: 'latest.release'
	shade group: 'com.electronwill.night-config', name: 'toml', version: 'latest.release'
	shade group: 'org.jooq', name: 'joor', version: 'latest.release'
	
	// https://github.com/StefanoBelli/JaGist
	shade ":jsgist-0.4.1"
	
	shade group: 'io.github.matyrobbrt', name: 'javanbt', version: 'latest.release'

	// Apache
	shade group: 'org.apache.commons', name: 'commons-io', version: 'latest.release'
	shade group: 'org.apache.commons', name: 'commons-lang3', version: 'latest.release'

	// Google
	shade group: 'com.google.guava', name:'guava', version: 'latest.release'
	shade group: 'com.google.code.gson', name: 'gson', version: 'latest.release'

	// Jdbi
	shade group: 'org.jdbi', name: 'jdbi3-core', version: 'latest.release'
	shade group: 'org.jdbi', name: 'jdbi3-sqlobject', version: 'latest.release'
	shade group: 'org.flywaydb', name: 'flyway-core', version: 'latest.release'
}

shadowJar {
	configurations = [project.configurations.shade]
	from sourceSets.api.allSource
	from sourceSets.main.allSource
	classifier ''
}

jar {
	from {
		sourceSets.api.output
		sourceSets.main.output
	}
	manifest {
		attributes(
				'Main-Class': "matyrobbrt.matybot.MatyBot"
				)
	}
}